<resources>
    <string name="app_name">Second Assignment</string>
    <string name="submit">Submit</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="pick_country_and_state">Select Country and State</string>
    <string name="pick_date">Select Birth Date</string>
    <string name="model_name">Model Name</string>
    <string name="done">Done</string>
    <string name="view_user">View User</string>
    <string name="go_back">Go Back</string>
    <string name="select_date">Select Date</string>
    <string name="user_list_activity">User List Activity</string>
    <string name="date_picker_activity">Date Picker Activity</string>

</resources>
